# text2sql-agent

./: .env.template  .gitignore  README.md  front.py  pyproject.toml  requirements.txt
chatbot/: chatclass.py  prompts.py
notebooks/: Consultor SQL OpenAI y Langchain.ipynb  practica.ipynb
notebooks/src/: chat.py
sakila_db/: sakila.sql
tools/: __init__.py  tools.py
