[project]
name = "conurma-app"
version = "0.1.0"
description = "Aplicacion Conurma"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "SQLAlchemy==2.0.29",
    "pymysql==1.0.2",
    "psycopg2-binary==2.9.10",
    "pyodbc==5.2.0",
    "python-dotenv==1.0.1",
    "pydantic==2.10.6",
    "langchain==0.3.15",
    "langchain-openai==0.3.8",
    "langchain-core==0.3.45",
    "langchain-community==0.3.10",
    "chainlit==2.5.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# To enable ruff import sorting
extend-select = ["I"]

[tool.ruff.format]
quote-style = "single"
line-ending = "auto"
indent-style = "tab"
docstring-code-format = true

[dependency-groups]
dev = ["pyright>=1.1.392.post0", "pytest>=8.3.4", "ruff>=0.9.3"]
